Updated with final package

--- a/Unsupervised Machine Learning/Final Assignment/Clustering Unsupervised Assignment.html
+++ b/Unsupervised Machine Learning/Final Assignment/Clustering Unsupervised Assignment.html
@@ -14551,28 +14551,79 @@ XYZ now wants to find out which customers are most likely to purchase XYZ's prod
 </thead>
 <tbody>
 <tr>
-<td></td>
+<td>CUSTID</td>
+<td>Identification of Credit Card holder (Categorical)</td>
+</tr>
+<tr>
+<td>BALANCE</td>
+<td>Balance amount left in their account to make purchases</td>
+</tr>
+<tr>
+<td>BALANCEFREQUENCY</td>
+<td>How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated)</td>
+</tr>
+<tr>
+<td>PURCHASES</td>
+<td>Amount of purchases made from account</td>
+</tr>
+<tr>
+<td>ONEOFFPURCHASES</td>
+<td>Maximum purchase amount done in one-go</td>
+</tr>
+<tr>
+<td>INSTALLMENTSPURCHASES</td>
+<td>Amount of purchase done in installment</td>
+</tr>
+<tr>
+<td>CASHADVANCE</td>
+<td>Cash in advance given by the user</td>
+</tr>
+<tr>
+<td>PURCHASESFREQUENCY</td>
+<td>How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased)</td>
+</tr>
+<tr>
+<td>ONEOFFPURCHASESFREQUENCY</td>
+<td>How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased)</td>
+</tr>
+<tr>
+<td>PURCHASESINSTALLMENTSFREQUENCY</td>
+<td>How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done)</td>
+</tr>
+<tr>
+<td>CASHADVANCEFREQUENCY</td>
+<td>How frequently the cash in advance being paid</td>
+</tr>
+<tr>
+<td>CASHADVANCETRX</td>
+<td>Number of Transactions made with "Cash in Advanced"</td>
+</tr>
+<tr>
+<td>PURCHASESTRX</td>
+<td>Numbe of purchase transactions made</td>
+</tr>
+<tr>
+<td>CREDITLIMIT</td>
+<td>Limit of Credit Card for user</td>
+</tr>
+<tr>
+<td>PAYMENTS</td>
+<td>Amount of Payment done by user</td>
+</tr>
+<tr>
+<td>MINIMUM_PAYMENTS</td>
+<td>Minimum amount of payments made by user</td>
+</tr>
+<tr>
+<td>PRCFULLPAYMENT</td>
+<td>Percent of full payment paid by user</td>
+</tr>
+<tr>
+<td>TENURE</td>
+<td>Tenure of credit card service for user</td>
 </tr>
 </tbody>
 </table>
-<p>CUSTID | Identification of Credit Card holder (Categorical)
-BALANCE | Balance amount left in their account to make purchases |
-BALANCEFREQUENCY | How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated) |
-PURCHASES | Amount of purchases made from account |
-ONEOFFPURCHASES | Maximum purchase amount done in one-go |
-INSTALLMENTSPURCHASES | Amount of purchase done in installment |
-CASHADVANCE | Cash in advance given by the user |
-PURCHASESFREQUENCY | How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased) |
-ONEOFFPURCHASESFREQUENCY | How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased) |
-PURCHASESINSTALLMENTSFREQUENCY | How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done) |
-CASHADVANCEFREQUENCY | How frequently the cash in advance being paid |
-CASHADVANCETRX | Number of Transactions made with "Cash in Advanced" |
-PURCHASESTRX | Numbe of purchase transactions made |
-CREDITLIMIT | Limit of Credit Card for user |
-PAYMENTS | Amount of Payment done by user |
-MINIMUM_PAYMENTS | Minimum amount of payments made by user |
-PRCFULLPAYMENT | Percent of full payment paid by user |
-TENURE | Tenure of credit card service for user |</p>
 
 </div>
 </div>
